# homepage

./: LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
css/: styles.css
data/: activities.yaml  disseminations.yaml  education.yaml  publications.yaml  research.yaml  teaching.yaml
docs/: activities.md  dissemination.md  education.md  index.md  publications.md  research.md
macros/: main.py
website/: activities.md  education.md  index.md  research.md
